updated how content spacing occurs, instead of using content, using margin top as to avoid issues with InputGroup

--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -277,3 +277,7 @@
 .miniLabel:not(.small) .affixLabel {
   padding-top: calc(var(--field--padding-top) - 2px);
 }
+
+.description {
+  margin-top: var(--space-smaller);
+}
